| Summary: | ASTERISK-25172: Crash in channels/sip/sip blind transfer/caller_refer_only test in ast_format_cap_append_from_cap during ast_request | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2015-06-19 12:01:35 | Date Closed: | 2015-07-27 11:32:52 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/CodecInterface Tests/testsuite |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace_6109.txt ( 1) full.txt ( 2) messages.txt | |
| Description: | Note that this occurred in a test suite run. The actual test that failed is probably a red herring, as nothing about this crash is specific to {{chan_sip}}.
Relevant portion of the backtrace is below: {code} Program terminated with signal 11, Segmentation fault. #0 0x00000000005e39a2 in ast_format_cap_append_from_cap (dst=0x7f3b3c464908, src=0x7f3b28030d78, type=AST_MEDIA_TYPE_UNKNOWN) at format_cap.c:242 242 struct format_cap_framed *framed = AST_VECTOR_GET(&src->preference_order, idx); #0 0x00000000005e39a2 in ast_format_cap_append_from_cap (dst=0x7f3b3c464908, src=0x7f3b28030d78, type=AST_MEDIA_TYPE_UNKNOWN) at format_cap.c:242 __idx = 0 framed = 0x82d1c9 idx = 0 res = 0 __PRETTY_FUNCTION__ = "ast_format_cap_append_from_cap" #1 0x000000000052e4af in ast_request (type=0x7f3b3c1431c0 "SIP", request_cap=0x7f3b28030d78, assignedids=0x0, requestor=0x7f3b3002c110, addr=0x7f3b3c1431c8 "end_c", cause=0x7f3af1abb5dc) at channel.c:6004 tmp_cap = 0x7f3b3c0ad758 tmp_fmt = 0xcc1628 best_audio_fmt = 0xcc1628 joint_cap = 0x7f3b3c464908 chan = 0xe3c1f0 c = 0x7f3a00000000 res = 0 foo = 32571 __PRETTY_FUNCTION__ = "ast_request" {code} Full logs and backtrace attached to the issue. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-07-26 11:54:29.839-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. | ||